--- a/static/style.css
+++ b/static/style.css
@@ -4,8 +4,9 @@ h1, h2          { font-family: 'Georgia', serif; margin: 0; }
 h1              { border-bottom: 2px solid #eee; }
 h2              { font-size: 1.2em; }
 
-.page           { margin: 2em auto; width: 35em; border: 5px solid #ccc;
+.page           { margin: 2em auto 1em auto; width: 35em; border: 5px solid #ccc;
                   padding: 0.8em; background: white; }
+.footer			{ text-align: center; font-size: 0.7em; margin: 0 auto 2em; }
 .entries        { list-style: none; margin: 0; padding: 0; }
 .entries li     { margin: 0.8em 1.2em; }
 .entries li h2  { margin-left: -1em; }
