--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,9 +13,11 @@
 			<a href="{{ url_for('logout') }}">log out</a>
 		{% endif %}
 		</div>
-		{% for message in get_flashed_messages() %}
-		<div class="flash">{{ message }}</div>
-		{% endfor %}
+		<div class="notice">
+			{% for message in get_flashed_messages() %}
+			<div class="flash">{{ message }}</div>
+			{% endfor %}
+		</div>
 		{% block body %}{% endblock %}
 	</div>
 	<div class="footer">
