--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,13 +22,14 @@
 	</div>
 	<div class="footer">
 		Created by <a href="http://digiblink.eu">digiBlink</a>. 
-		Get the reflaskr code from <a href="https://github.com/digiblink/reflaskr">GitHub</a>!
+		Get the reflaskr code from <a href="https://github.com/zxpower/reflaskr">GitHub</a>!
 	</div>
 	
 	<!-- JavaScript at the bottom for fast page loading -->
 
 	<!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+	<script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+
     <script>window.jQuery || document.write('<script src="{{ url_for('static', filename='js/jquery.min.js') }}"><\/script>')</script>
 
     <!-- scripts concatenated and minified via ant build script-->
